<resources>
    <string name="app_name">Ipdam</string>
    <string name="menu_home">홈</string>
    <string name="menu_bookmarks">관심리뷰</string>
    <string name="menu_myipdam">마이리뷰</string>
    <string name="menu_profile">마이페이지</string>
    <string name="clientid_navermap">uj5pdp7rc1</string>
    <string name="hint_main_search">어느 곳의 입담 리뷰를 찾아볼까요?</string>
    <string name="hint_address_search">장소, 빌딩명, 주소 검색</string>
    <string name="location_access_required">현재 위치를 알기 위해서는 Fine Location 퍼미션이 필요합니다.</string>
    <string name="location_access_denied">Fine Location 퍼미션 권한을 사용하지 않아 현재 위치를 알 수 없습니다.</string>
    <string name="ipdam_header_text">%1$s 자취방 리뷰 &lt;font color=\"%2$s\">%3$d&lt;/font>개</string>
    <!-- Splash 화면 -->
    <string name="splash_text">입주자들의 솔직한 이야기를 만나보세요</string>
    <!--    마이페이지-->
    <string name="profile_title">마이페이지</string>
    <string name="profile_terms">이용약관</string>
    <string name="profile_creator">만든이</string>
    <string name="profile_version">버전</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_not_found_version">버전 내용을 알 수 없습니다.</string>
    <!--    로그인 화면-->
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_button">로그인하기</string>
    <string name="login_find_account">&lt;u>아이디 혹은 비밀번호를 잊으셨나요?&lt;/u></string>
    <string name="login_create_account">&lt;u>입담 회원가입&lt;/u></string>
    <!--    회원 가입 페이지-->
    <string name="register_title">회원가입</string>
    <string name="register_id_text">아이디</string>
    <string name="register_id_hint">6~12자 영문, 숫자 조합하여 만들어주세요. </string>
    <string name="register_password_text">비밀번호</string>
    <string name="register_password_hint">6~20자 영문, 숫자, 특수문자를 조합해주세요.</string>
    <string name="register_password_check_text">비밀번호 확인</string>
    <string name="register_password_check_hint">비밀 번호 확인을 위해 한번 더 입력해주세요.</string>
    <string name="register_school_text">학교설정</string>
    <string name="register_school_hint">재학중인 학교를 선택해주세요</string>
    <string name="register_button">회원가입하기</string>
    <string name="register_id_result_failed">다시 만들어주세요!</string>
    <string name="register_id_result_success">멋진 아이디에요!</string>
    <string name="register_password_result_failed">비밀번호가 달라요!</string>
    <string name="register_password_result_success">확인되었습니다!</string>
    <!--    검색 페이지-->
    <string name="search_place_header">%1$s 검색결과</string>
    <string name="search_result_none">검색한 결과가 없습니다.</string>
    <string name="empty_search_address">검색할 장소를 입력해주세요</string>
    <!-- 학교 검색 페이   -->
    <string name="school_title">학교 검색</string>
    <string name="school_content">학교명</string>
    <string name="school_confirm">확인</string>
    <string name="school_search_hint">재학중인 학교를 검색해주세요</string>
    <string name="school_result_address">주소</string>
</resources>